# bzlmodRio-opencv

./: .gitignore  MODULE.bazel  README.md  maven_cpp_deps.bzl
.github/workflows/: build.yml  lint.yml
dependencies/cpp/opencv/: BUILD.bazel
dependencies/java/opencv/: BUILD.bazel
dependencies/opencv-cpp/: BUILD.bazel  MODULE.bazel
dependencies/opencv-cpp/tests/: .bazelrc  BUILD.bazel
dependencies/opencv-java/: MODULE.bazel
dependencies/opencv-java/tests/: BUILD.bazel  MODULE.bazel
dependencies/opencv/opencv-cpp/: BUILD.bazel  MODULE.bazel
dependencies/opencv/opencv-cpp/tests/: MODULE.bazel  main.cpp
dependencies/opencv/opencv-java/: BUILD.bazel  MODULE.bazel
dependencies/opencv/opencv-java/tests/: .bazelrc  BUILD.bazel  MODULE.bazel
generate/: generate_opencv.py  get_opencv_dependencies.py  module_config.json.jinja2  publish_opencv.py
tests/: .bazelrc  MODULE.bazel
tests/cpp/opencv/: BUILD.bazel  test.cpp
tests/java/opencv/: BUILD.bazel  BasicTest.java  Main.java
workflows/: build.yml
