cc_library(
    name = "opencv",
    linkstatic = 1,
    visibility = ["//visibility:public"],
    deps = [] + ["@opencv-cpp-headers//:headers"] + select({
        "@bazel_tools//src/conditions:windows": ["@opencv-cpp-windowsx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:linux_x86_64": ["@opencv-cpp-linuxx86-64//:shared_libs"],
        "@bazel_tools//src/conditions:darwin": ["@opencv-cpp-osxx86-64//:shared_libs"],
        # "//constraints/is_roborio:roborio": ["@opencv-cpp-linuxathena//:shared_libs"],
    }),
)
