
bazel_dep(name = "opencv-cpp", repo_name = "opencv-cpp", version = "")

local_path_override(
    module_name = "opencv-cpp",
    path = "..",
)



bazel_dep(name = "rules_bazelrio", version = "0.0.1")
local_path_override(
    module_name = "rules_bazelrio",
    path = "../../../../rules_bazelrio"
)

bazel_dep(name = "rules_cc", version = "0.0.2")