
bazel_dep(name = "opencv-java", repo_name = "opencv-java", version = "")

local_path_override(
    module_name = "opencv-java",
    path = "..",
)




bazel_dep(name = "bazel_skylib", version = "1.2.1")
bazel_dep(name = "platforms", version = "0.0.4")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_java", version = "5.1.0")
bazel_dep(name = "rules_python", version = "0.12.0")
bazel_dep(name = "rules_jvm_external", version = "4.4.2")




local_path_override(
    module_name = "opencv-cpp",
    path = "../../../opencv/opencv-cpp"
)



maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

bazel_dep(name = "rules_bazelrio", version = "0.0.1")

maven.install(
    artifacts = [
        "edu.wpi.first.thirdparty.frc2023.opencv:opencv-java:4.6.0-2",
    ],
    repositories = [
        "https://repo1.maven.org/maven2",
        "https://frcmaven.wpi.edu/release",
    ]
    # lock_file = "//:maven_install.json",
)

use_repo(
    maven,
    "maven",
)